--- a/index.html
+++ b/index.html
@@ -309,6 +309,7 @@
 						servers: [
 							{ addr: "wss://web.epicblocks.online/", name: "Epic Blocks (broken link NÃO USE)" },
 							{ addr: "wss://pcmkr8ch-8081.brs.devtunnels.ms/", name: "Epic Blocks" },
+							{ addr: "wss://actual-promptly-cod.ngrok-free.app/", name: "Epic Blocks Alt"},
 							{ addr: "wss://mc.arch.lol/", name: "ArchMC" },
 							{ addr: "wss://ep.rufan.tech", name: "TimeLegacy"},
 							{ addr: "wss://play.ragexwaternet.online", name: "Water Network"},
