--- a/index.html
+++ b/index.html
@@ -310,6 +310,7 @@
 							{ addr: "wss://web.epicblocks.online/", name: "Epic Blocks (broken link NÃO USE)" },
 							{ addr: "wss://pcmkr8ch-8081.brs.devtunnels.ms/", name: "Epic Blocks" },
 							{ addr: "wss://factual-promptly-cod.ngrok-free.app/", name: "Epic Blocks Alt"},
+							{ addr: "wss://eag.hyper-network.net/", name: "Hyper Network"},
 							{ addr: "wss://mc.arch.lol/", name: "ArchMC" },
 							{ addr: "wss://ep.rufan.tech", name: "TimeLegacy"},
 							{ addr: "wss://play.ragexwaternet.online", name: "Water Network"},
